src/objects/Set_Time__c.object
<CustomObject>
    <fields>
        <fullName>Band__c</fullName>
        <label>Band</label>
        <referenceTo>Band__c</referenceTo>
        <relationshipLabel>Set Time</relationshipLabel>
        <relationshipName>Set_Time</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <referenceTo>Stages__c</referenceTo>
        <relationshipLabel>Set Time</relationshipLabel>
        <relationshipName>Set_Time</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <picklist>
            <picklistValues>
                <fullName>8 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Set Time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Nome de Set Time</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Set Time</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>